@@ -15,6 +15,7 @@ gecos_name = CALLER_NAME
 acl_smtp_connect = acl_connect
 acl_smtp_rcpt = acl_rcpt
 qualify_domain = test.ex
+queue_run_in_order
 
 
 # ----- ACLs -----
