@@ -18,3 +18,23 @@ X-Added: userx@test.ex
 
 No headers supplied.
 
+From x@y Tue Mar 02 09:44:33 1999
+Received: from CALLER by myhost.test.ex with local-bsmtp (Exim x.yz)
+	(envelope-from <x@y>)
+	id 10HmaZ-0005vi-00
+	for userx@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
+Message-Id: <E10HmaZ-0005vi-00@myhost.test.ex>
+From: x@y
+Date: Tue, 2 Mar 1999 09:44:33 +0000
+
+No headers supplied.
+
+From nofix@test.ex Tue Mar 02 09:44:33 1999
+Received: from CALLER by myhost.test.ex with local-bsmtp (Exim x.yz)
+	(envelope-from <nofix@test.ex>)
+	id 10HmbA-0005vi-00
+	for userx@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
+X-Added: userx@test.ex
+
+No headers supplied.
+
