@@ -133,6 +133,7 @@ sender address = NULL
 sender_fullhost = [V4NET.11.12.13]
 sender_rcvhost = [V4NET.11.12.13] (ident=CALLER)
 set_process_info: pppp handling incoming connection from [V4NET.11.12.13] via -oMa
+set_process_info: pppp accepting a local SMTP message from <CALLER>
 host in hosts_connection_nolog? no (option unset)
 LOG: smtp_connection MAIN
   SMTP connection from CALLER
